--- a/lib/cupe_un_url_web/templates/cuped_url/form.html.heex
+++ b/lib/cupe_un_url_web/templates/cuped_url/form.html.heex
@@ -1,19 +1,15 @@
-<.form let={f} for={@changeset} action={@action}>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
 
-  <%= label f, :shorty %>
-  <%= text_input f, :shorty %>
-  <%= error_tag f, :shorty %>
 
-  <%= label f, :longy %>
+<.form let={f} for={@conn} action={@action}>
+
+  <%= hidden_input f, :shorty , value: assigns.shorty %>
+
+  <%= label f, "Please paste the URL (a valid one would be nice):" %>
   <%= text_input f, :longy %>
   <%= error_tag f, :longy %>
 
   <div>
-    <%= submit "Save" %>
+    <%= submit "Get Shorty!" %>
   </div>
 </.form>
+
