--- a/lib/cupe_un_url_web/templates/cuped_url/new.html.heex
+++ b/lib/cupe_un_url_web/templates/cuped_url/new.html.heex
@@ -1,5 +1,3 @@
-<h1>New Cuped url</h1>
+<h1>Get Shorty of the url</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.cuped_url_path(@conn, :create)) %>
-
-<span><%= link "Back", to: Routes.cuped_url_path(@conn, :index) %></span>
+<%= render "form.html", Map.put(assigns, :action, Routes.cuped_url_path(@conn, :new)) %>
