--- a/lib/cupe_un_url_web/templates/cuped_url/show.html.heex
+++ b/lib/cupe_un_url_web/templates/cuped_url/show.html.heex
@@ -4,12 +4,12 @@
 
   <li>
     <strong>Use this Shorty </strong>
-    <%= @cuped_url.shorty %>
+    <%= @conn.assigns.shorty %>
   </li>
 
   <li>
     <strong> to access the URL bellow:</strong>
-    <%= @cuped_url.longy %>
+    <%= @conn.assigns.longy %>
   </li>
 
 </ul>
